@@ -300,6 +300,8 @@ class PloneMeetingTestCase(unittest2.TestCase, PloneMeetingTestingHelpers):
                 annotations_to_delete.append(annotation)
             if annotation.startswith('meeting-config-getcategories-'):
                 annotations_to_delete.append(annotation)
+            if annotation.startswith('meeting-config-gettopics-'):
+                annotations_to_delete.append(annotation)
         for annotation_to_delete in annotations_to_delete:
             del annotations[annotation_to_delete]
 
